# VedioDownloader

./: .gitignore  README.md  check_gpu.py  debug_yt_dlp.py  main.py  pyproject.toml
.trae/documents/: plan_20260205_144511.md  plan_20260205_163431.md
core/: converter.py  downloader.py  transcriber.py
ui/: app.py  theme.py
ui/views/: convert_view.py  download_view.py  transcribe_view.py
utils/: config.py  logger.py
video_downloader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
